--- a/.github/workflows/compliance-gate.yml
+++ b/.github/workflows/compliance-gate.yml
@@ -95,8 +95,9 @@ jobs:
           # This is a simplified example - in production you'd use proper MCP client
           # For now, we'll use the Python API directly
           HANDLE=$(uv run python -c "
-          from reqif_mcp.server import parse_reqif_xml, store_baseline, normalize_reqif
-          from reqif_mcp.reqif_parser import parse_reqif_xml as parse_xml
+          from reqif_mcp.server import store_baseline
+          from reqif_mcp.reqif_parser import parse_reqif_xml
+          from reqif_mcp.normalization import normalize_reqif
           import base64
           import json
           import sys
@@ -106,7 +107,7 @@ jobs:
           xml_b64 = '''$REQIF_B64'''
           try:
               xml_str = base64.b64decode(xml_b64).decode('utf-8')
-              parse_result = parse_xml(xml_str)
+              parse_result = parse_reqif_xml(xml_str)
               if isinstance(parse_result, Failure):
                   print(f'Parse error: {parse_result.failure()}', file=sys.stderr)
                   sys.exit(1)
@@ -136,20 +137,18 @@ jobs:
         run: |
           # Query CYBER requirements from the baseline
           uv run python -c "
-          from reqif_mcp.server import query_requirements, get_baseline_by_handle
-          from returns.result import Failure
+          from reqif_mcp.server import query_requirements
           import json
           import sys
           import os
 
           handle = os.environ['BASELINE_HANDLE']
-          result = get_baseline_by_handle(handle)
-          if isinstance(result, Failure):
-              print(f'Baseline not found: {result.failure()}', file=sys.stderr)
-              sys.exit(1)
+          filtered = query_requirements(handle, subtypes=['CYBER'])
 
-          requirements = result.unwrap()
-          filtered = query_requirements(requirements, subtypes=['CYBER'])
+          # Check for errors
+          if 'error' in filtered:
+              print(f\"Query error: {filtered['error']}\", file=sys.stderr)
+              sys.exit(1)
 
           # Save requirements to file for next step
           with open('requirements.json', 'w') as f:
