--- a/.github/workflows/compliance-gate.yml
+++ b/.github/workflows/compliance-gate.yml
@@ -15,6 +15,9 @@ jobs:
       security-events: write
       # Required for checking out code
       contents: read
+      # Required for commenting on PRs
+      pull-requests: write
+      issues: write
 
     steps:
       - name: Checkout code
@@ -317,8 +320,9 @@ jobs:
           "
 
       - name: Upload SARIF to GitHub Security
-        if: always()
-        uses: github/codeql-action/upload-sarif@v3
+        if: always() && hashFiles('merged.sarif') != ''
+        continue-on-error: true
+        uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: merged.sarif
           category: compliance-gate
