fix: Correct Docker metadata tag format for PRs
The metadata action was generating invalid tags with leading hyphens
(e.g., '-a2d97fd') which caused Docker build failures.

Changes:
- Use 'type=ref,event=pr,prefix=pr-' for PR builds (generates 'pr-15')
- Use 'type=sha,prefix=sha-' for SHA tags (generates 'sha-abc123')
- Add branch reference tag for main branch builds

This ensures all generated tags are valid Docker image tags.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -53,8 +53,12 @@ jobs:
             type=semver,pattern={{major}}
             # Latest tag for main branch
             type=raw,value=latest,enable={{is_default_branch}}
+            # PR tag (pr-15)
+            type=ref,event=pr,prefix=pr-
+            # Branch tag for main
+            type=ref,event=branch,enable=${{ github.ref == 'refs/heads/main' }}
             # SHA tag for traceability
-            type=sha,prefix={{branch}}-
+            type=sha,prefix=sha-
           labels: |
             org.opencontainers.image.title=ReqIF-OPA-MCP
             org.opencontainers.image.description=ReqIF compliance gate system with OPA and SARIF
